man was created

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Belén Matto <mattobelen@gmail.com>
-Mateo Gallo <>
+Mateo Gallo <mateogesede@gmail.com>
